--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,11 @@
-# This file may be used to create an environment using:
-# $ conda create --name <env> --file <this file>
-# platform: linux-64
-biopython=1.80=pypi_0
-fast-ctc-decode=0.3.2=pypi_0
-h5py=3.7.0=pypi_0
-numpy=1.23.5=py310hd5efca6_0
-ont-fast5-api=4.1.1=pypi_0
-pandas=1.5.2=py310h1128e8f_0
-pysam=0.20.0=pypi_0
-python=3.10.8=h7a1cb2a_1
-pytorch=1.13.1=py3.10_cuda11.7_cudnn8.5.0_0
-scikit-learn=1.2.0=py310h6a678d5_1
-scipy=1.9.3=py310hd5efca6_0
-tqdm=4.64.1=pypi_0
+biopython==1.80
+fast-ctc-decode==0.3.2
+h5py==3.7.0
+numpy==1.23.5
+ont-fast5-api==4.1.1
+pandas==1.5.2
+pysam==0.20.0
+torch==1.13.1
+scikit-learn==1.2.0
+scipy==1.9.3
+tqdm==4.64.1
